fix ui/ux on small devices

--- a/src/components/Button/style.scss
+++ b/src/components/Button/style.scss
@@ -6,7 +6,7 @@
   justify-content: center;
   position: absolute;
   right: 0.75rem;
-  top: 28px;
+  top: 27px;
   z-index: 15;
 
   color: $color-1;
