--- a/src/components/Details/style.scss
+++ b/src/components/Details/style.scss
@@ -5,7 +5,6 @@
 
   p:first-child {
     margin-bottom: 1rem;
-    text-align: justify;
   }
 
   span {
@@ -13,8 +12,16 @@
   }
 }
 
+.contact {
+  p,
+  a,
+  span {
+    font-size: 1.5rem;
+  }
+}
+
 .details {
-  margin-top: 40px;
+  margin-top: 50px;
 
   ul li {
     display: flex;
@@ -53,11 +60,10 @@
 
 @media screen and (min-width: 1024px) {
   .contact .header {
-
     p:first-child {
       text-align: left;
     }
-    
+
     span {
       display: contents;
     }
